...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="6ap-fb-49C" id="LsY-yc-Q8Y"/>
                            <outlet property="delegate" destination="6ap-fb-49C" id="zyX-Fl-pev"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Root View Controller" id="S2J-ts-bvD"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bh0-g9-Nvm" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-361" y="812"/>
        </scene>
        <!--Navigation Controller-->
...
                                                                <constraint firstAttribute="height" constant="40" id="ncj-QX-JZf"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3kx-xy-k1E">
                                                            <rect key="frame" x="12" y="230" width="351" height="50"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="50" id="Gzm-9M-mGA"/>
                                                            </constraints>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                                        </textField>
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DEC-c5-yKd">
                                                            <rect key="frame" x="12" y="290" width="351" height="50"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="50" id="Kwc-dd-Yc0"/>
                                                            </constraints>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="unK-LR-Jy7">
                                                            <rect key="frame" x="12" y="380" width="351" height="50"/>
                                                            <color key="backgroundColor" red="0.1176470588" green="0.29411764709999999" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="50" id="Lpc-Py-o56"/>
                                                            </constraints>
                                                            <state key="normal" title="Sign In">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                            </state>
                                                            <connections>
                                                                <action selector="btnRegisterPressed:" destination="QdU-UX-dS1" eventType="touchUpInside" id="m3B-GM-yfV"/>
                                                            </connections>
                                                        </button>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rO-Eu-cQ6">
                                                            <rect key="frame" x="20" y="265" width="335" height="30"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="30" id="aRN-MR-Cmb"/>
                                                            </constraints>
                                                            <color key="tintColor" red="0.1176470588" green="0.29411764709999999" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <state key="normal" title="I'm a registered user"/>
                                                            <connections>
                                                                <action selector="alreadyRegisteredButtonPressed:" destination="qgI-1N-ypm" eventType="touchUpInside" id="Nde-Wh-90Q"/>
                                                                <segue destination="QdU-UX-dS1" kind="show" identifier="ShowLoginControllerSegue" id="wYw-bC-TFR"/>
                                                            </connections>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o2d-gA-n9Y">
...
