...
    
    
    override func viewDidLoad() {
        super.viewDidLoad()

        navigationItem.title = "User Selection"
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(doCancel))
        
        addRefreshControl()
        
        self.refreshControlView?.beginRefreshing()
        handleRefresh()
        
...
